--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   }
   
   .center-size {
-    @apply h-full min-w-0 max-w-[1160px];
+    @apply min-w-0 max-w-[1160px];
   }
 
   .link-underline::after {
