Added Chinese to Location page

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
   }
 
   .show-stack {
-    @apply flex flex-col text-center items-center;
+    @apply flex flex-col items-center justify-center;
   }
 
   .link-underline::after {
