--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,16 @@
   .center-size {
     @apply min-w-0 max-w-[1160px];
   }
-
+  
   .main-hero {
     @apply grid grid-rows-[auto,1fr] h-[60%] px-10 center-size
     sm:grid-cols-2 sm:grid-rows-1 sm:h-[680px] sm:items-center sm:justify-items-center;
   }
-
+  
+  .page-container {
+    @apply flex flex-col mt-8 items-center text-xl;
+  }
+  
   .show-stack {
     @apply flex flex-col items-center justify-center;
   }
@@ -55,8 +59,44 @@
     @apply flex flex-col gap-y-2 w-full;
   }
 
-  .page-container {
-    @apply flex flex-col my-8 p-8 items-center text-xl;
+  .hero-stack {
+    @apply flex flex-col text-center items-center gap-5;
+  }
+
+  .hero-stack-heading {
+    @apply text-5xl font-semibold;
+  }
+
+  .hero-stack-subheading {
+    @apply text-3xl;
+  }
+
+  .hero-stack-call-to-action {
+    @apply px-4 py-2 text-xl bg-brand rounded-lg font-semibold;
+  }
+
+  .hero-image {
+    @apply p-10 sm:w-[60%] sm:object-contain sm:p-0;
+  }
+
+  .carousel-container {
+    @apply flex flex-col p-4 mt-8 bg-gray-300 w-full shadow-2xl z-[2] sm:center-size sm:min-w-full;
+  }
+
+  .carousel-heading {
+    @apply p-4 self-center text-lg text-center font-semibold w-[80%] sm:w-[40%] sm:text-2xl;
+  }
+
+  .carousel-label {
+    @apply text-xl text-center;
+  }
+
+  .carousel {
+    @apply w-full p-8;
+  }
+
+  .carousel-image {
+    @apply sm:h-[700px] object-contain rounded-xl;
   }
 }
 
